--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="mf_start_btn_msg">Let\'s go</string>
     <string name="mf_map_btn_msg">Open map</string>
-    <string name="powered_by_msg" translatable="false">by KonstantIMP</string>
+    <string name="powered_by_msg" translatable="false">by KonstantIMP, witelokk</string>
 
     <string name="mf_choose_floor_msg">Choose the floor</string>
     <string name="qv_skip_question_btn">Skip this question</string>
